syntax = "proto3";

package api;

option go_package = "repository/publish/";

service RepositoryServicePublish {
  rpc PublishMeme (PublishMemeRequest) returns (PublishMemeResponse);
}

message PublishMemeRequest {
  string timestamp = 1;
  string text = 2;
}

message PublishMemeResponse {
  bool success = 1;
}
